Thu Nov  2 19:26:47 2000  Andrew Lanoix  <alanoix@umich.edu>

	* src/tcp.c: gnet_tcp_socket_new_async_cancel() Win32 version
            did not cleanup properly
	* src/gnet-private.c: Removed debug code
	* gnetconfig.h.win32: Defined GNET_WIN32 here if not defined
	* src/iochannel.[hc]:
	* src/gnet-private.[hc]:
	    Added Glib of Win32 GIOChannel Socket FIX
	* src/tcp.c: gnet_tcp_server_accept() Don't force the socket
	    in the Win32 version into blocking mode.
	* gnet.def: Added g_io_channel_win32_new_stream_socket()
	* README.win32: Updates

Thu Nov  2 15:24:04 2000  David Helder  <dhelder@umich.edu>

	* src/*.h: Added #ifdef GNET_EXPERIMENTAL around experimental
	   stuff.
	
	* src/url.c (gnet_url_clone): g_strdup will return NULL if str is
	   NULL - don't check.

Mon Oct 30 20:34:29 2000  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c (async_echoserver): Code cleanups

Sun Oct 29 22:44:22 2000  David Helder  <dhelder@umich.edu>

	* examples/echo*.c: s/--nonblocking/--async/ since it's
	    asynchronous, not nonblocking.
	
	* examples/echoclient.c: Added example showing GConn way.  Started
	   showing asynchronous example.  UNFINISHED.

	* src/iochannel.c (gnet_io_channel_readline_check_func): 
	    Don't replace \n with \0.  This is what readline
	    does.

	* examples/echoserver.c: Added example showing GServer way
	* src/server.h (GServerFunc): s/struct _GConn/GConn/
	* examples/echoserver.c: Clean-ups

Sun Oct 29 17:50:46 2000  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c: Fixed non-blocking server example.  It
	    had a couple problems.  It should not have switched on the
	    condition, because it's a bit field, not an enum.  It should
	    have done better error checking too.

	* BUGS: Added

	* src/pack.c: Change 'P' to 'v' for void pointer.  Void
	   pointer will always be native size.
	* src/pack.c: Updated docs
	
Thu Oct 26 16:23:29 2000  David Helder  <dhelder@umich.edu>
